force-app/main/default/objects/Apttus__DocumentAgreementClause__c/Apttus__DocumentAgreementClause__c.object-meta.xml
<CustomObject>
    <description>Agreement clauses in an agreement document</description>
    <label>Document Agreement Clause</label>
    <nameField>
        <label>Document Agreement Clause Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Agreement Clauses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>