force-app/main/default/objects/Apttus__DocumentAgreementClause__c/fields/Apttus__AgreementClauseId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__AgreementClauseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agreement clause id</description>
    <inlineHelpText>Agreement clause id</inlineHelpText>
    <label>Agreement Clause</label>
    <referenceTo>Apttus__Agreement_Clause__c</referenceTo>
    <relationshipLabel>Document Agreement Clauses</relationshipLabel>
    <relationshipName>DocumentAgreementClauses</relationshipName>
    <type>Lookup</type>
</CustomField>