force-app/main/default/objects/Apttus__DocumentAgreementClause__c/fields/Apttus__ClauseOrder__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ClauseOrder__c</fullName>
    <description>Order of the clause in the agreement document</description>
    <inlineHelpText>Order of the clause in the agreement document</inlineHelpText>
    <label>Clause Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>