force-app/main/default/objects/Apttus__DocumentAgreementClause__c/fields/Apttus__DocumentVersionDetailId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocumentVersionDetailId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Document version detail id</description>
    <inlineHelpText>Document version detail id</inlineHelpText>
    <label>Document Version Detail</label>
    <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
    <relationshipLabel>Document Agreement Clauses</relationshipLabel>
    <relationshipName>DocumentAgreementClauses</relationshipName>
    <type>Lookup</type>
</CustomField>